--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "GitPrestige",
-    "version": "0.0.1",
-    "license": "MIT",
-    "main": "gitprestige.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Vladimir37/GitPrestige/"
-    },
-    "scripts": {
-        "start": "node gitprestige.js"
-    },
-    "dependencies": {
-        "body-parser": "*",
-        "express": "*",
-        "jade": "*",
-        "serve-favicon": "*",
-        "mysql": "*",
-        "sequelize": "*",
-        "easy-encryption": "*",
-        "github": "*"
-    }
+  "name": "GitPrestige",
+  "version": "0.0.1",
+  "license": "MIT",
+  "main": "gitprestige.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vladimir37/GitPrestige/"
+  },
+  "scripts": {
+    "start": "node gitprestige.js"
+  },
+  "dependencies": {
+    "body-parser": "*",
+    "easy-encryption": "*",
+    "express": "*",
+    "github": "*",
+    "jade": "*",
+    "mysql": "*",
+    "random-token": "0.0.8",
+    "sequelize": "*",
+    "serve-favicon": "*"
+  }
 }
